--- a/example-kafka/base/example-service-registry.yaml
+++ b/example-kafka/base/example-service-registry.yaml
@@ -7,3 +7,6 @@ spec:
     persistence: 'kafkasql'
     kafkasql:
       bootstrapServers: 'example-kafka-kafka-bootstrap:9092'
+  deployment:
+    host: >-
+      example-service-registry.example-kafka.apps.ocp.snimmo.com
