changed host config

--- a/example-kafka/base/example-service-registry.yaml
+++ b/example-kafka/base/example-service-registry.yaml
@@ -8,5 +8,4 @@ spec:
     kafkasql:
       bootstrapServers: 'example-kafka-kafka-bootstrap:9092'
   deployment:
-    host: >-
-      example-service-registry.example-kafka.apps.ocp.snimmo.com
+    host: example-service-registry.example-kafka.apps.ocp.snimmo.com
