--- a/example-kafka/base/example-service-registry.yaml
+++ b/example-kafka/base/example-service-registry.yaml
@@ -8,4 +8,6 @@ spec:
     kafkasql:
       bootstrapServers: 'example-kafka-kafka-bootstrap:9092'
   deployment:
-    host: example-service-registry.example-kafka.apps.ocp.snimmo.com
+    host: PATCH
+
+# https://www.apicur.io/registry/docs/apicurio-registry-operator/1.0.0/assembly-operator-configuration.html#spec
