added custom route

--- a/example-kafka/base/kustomization.yaml
+++ b/example-kafka/base/kustomization.yaml
@@ -6,4 +6,5 @@ namespace: example-kafka
 resources:
   - example-kafka.yaml
   - example-service-registry.yaml
+  - example-service-registry-route.yaml
   - topics
